syntax = "proto3";

option java_multiple_files = true;
option java_package = "ufu.davigabriel.server";
option java_outer_classname = "ServerProto";
option objc_class_prefix = "SV";

package server;

message ClientGRPC {
  // ClientGRPC IDGRPC
  string CID = 1;
  // JSON string representing ClientGRPC data: at least a name
  string data = 2;
}

message ProductGRPC {
  // Produto IDGRPC
  string PID = 1;
  // JSON string representing produto data: at least ProductGRPC name, price, and
  // quantity
  string data = 2;
}

message OrderGRPC {
  // OrderGRPC IDGRPC
  string OID = 1;
  // ClientGRPC IDGRPC
  string CID = 2;
  // JSON string representing at least array of PIDs, prices, and quantities
  string data = 3;
}

message ReplyGRPC {
  // Error code: 0 for success
  int32 error = 1;
  // Error message, if error > 0
  optional string description = 2;
}

message IDGRPC {
  // generic IDGRPC for CID, PID and OID
  string IDGRPC = 1;
}

message ClientOrErrorGRPC {
  oneof message {
    ClientGRPC clientGRPC = 1;
    ReplyGRPC replyGRPC = 2;
  }
}

service AdminPortal {
  rpc CreateClient(ClientGRPC) returns (ReplyGRPC) {}
  rpc RetrieveClient(IDGRPC) returns (ClientOrErrorGRPC) {}
  rpc UpdateClient(ClientGRPC) returns (ReplyGRPC) {}
  rpc DeleteClient(IDGRPC) returns (ReplyGRPC) {}
  rpc CreateProduct(ProductGRPC) returns (ReplyGRPC) {}
  rpc RetrieveProduct(IDGRPC) returns (ProductGRPC) {}
  rpc UpdateProduct(ProductGRPC) returns (ReplyGRPC) {}
  rpc DeleteProduct(IDGRPC) returns (ReplyGRPC) {}
}

service OrderPortal {
  rpc CreateOrder(OrderGRPC) returns (ReplyGRPC) {}
  rpc RetrieveOrder(IDGRPC) returns (OrderGRPC) {}
  rpc UpdateOrder(OrderGRPC) returns (ReplyGRPC) {}
  rpc DeleteOrder(IDGRPC) returns (ReplyGRPC) {}
  rpc RetrieveClientOrders(IDGRPC) returns (stream OrderGRPC) {}
}